fixed sample text scrolling readability on First Doses

--- a/src/App.css
+++ b/src/App.css
@@ -335,7 +335,7 @@
   font-size: larger;
   justify-content: center;
   border-radius: 25px;
-  height: 500px;
+  height: 300px;
 }
 
 
@@ -383,8 +383,8 @@
   border-radius: 5px;
   padding-left: 5%;
   padding-right: 5%;
-  margin-top: 50px;
-  height: 50px;
+  margin-top: 5px;
+  height: 100px;
   width: 100%;
   overflow: hidden;
 }
